--- a/source/index.html
+++ b/source/index.html
@@ -16,23 +16,33 @@
     <header class="main-header visually-hidden">Шапка</header>
     <nav class="navigation navigation--closed navigation--nojs container" data-test="header">
       <div class="navigation__container">
-      <a class="navigation__logo" href="#">
-        <picture>
+        <a class="navigation__logo" href="#">
+          <picture>
             <source media="(min-width: 1440px)" srcset="images/logodesktop.svg" width="170" height="36" type="image/svg+xml">
             <source media="(min-width: 768px)" srcset="images/logotablet.svg" width="82" height="36" type="image/svg+xml">
             <img class="navigation__logo-image" src="/images/logomobile.svg" width="32" height="36" alt="Логотип Drink2Go">
-      </a>
-     </picture>
-     <p class="navigation__logo-notification">Интернет-магазин <br> кофейных напитков</p>
-     </div>
-     <div class="navigation__container-buttons">
-      <button class="navigation__personal navigation__button" type="button" aria-label="Личный кабинет">Войти</button>
-      <button class="navigation__basket navigation__button" type="button" aria-label="Корзина">Корзина</button>
-      <button class="navigation__toggle navigation__button js-toggle-button" type="button" aria-label="Выпадающий список меню"></button>
+          </picture>
+        </a>
+        <p class="navigation__logo-notification">Интернет-магазин <br> кофейных напитков</p>
       </div>
-     <div class="navigation__wrapper">
-      <ul class="navigation__list clearul">
-        <li class="navigation__item navigation__item--current">
+      <div class="navigation__container-buttons">
+         <a class="navigation__personal navigation__button" href="#">
+          <span class="visually-hidden">Личный кабинет</span>
+          <p>Войти</p>
+          <svg viewBox="0 0 16 16" width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M10.67 4a2.67 2.67 0 1 1-5.34 0 2.67 2.67 0 0 1 5.34 0Zm1.33 0a4 4 0 1 1-8 0 4 4 0 0 1 8 0Zm-8.8 8.31a7.55 7.55 0 0 1 4.8-1.64c1.84 0 3.56.6 4.8 1.64a4.83 4.83 0 0 1 1.87 3.69h1.33c0-1.77-.84-3.46-2.34-4.71a8.88 8.88 0 0 0-5.66-1.96c-2.12 0-4.16.7-5.66 1.96a6.16 6.16 0 0 0-2.34 4.71h1.33c0-1.33.63-2.66 1.87-3.69Z"/></svg>
+        </a>
+        <a class="navigation__basket navigation__button" href="#">
+          <span class="visually-hidden">Корзина</span>
+          <p>Корзина</p>
+          <svg viewBox="0 0 16 16" width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="m5.66 3.88.23 2.79h4.22l.23-2.8a2.35 2.35 0 1 0-4.68 0Zm5.78 2.79.23-2.68a3.68 3.68 0 1 0-7.34 0l.23 2.68h-4.56l.19 1.33.82 5.71a2.67 2.67 0 0 0 2.64 2.29h8.7c1.33 0 2.46-.98 2.64-2.29l.82-5.71.19-1.33h-4.55Zm-.1 1.33h-.06l-.22 2.67h3.02l.38-2.67h-3.13Zm-1.4 0h-3.88l.22 2.67h3.44l.22-2.67Zm-5.22 0h-3.18l.38 2.67h3.02l-.22-2.67Zm1.9 6.67-.23-2.67h3.22l-.22 2.67h-2.78Zm4.33-2.67-.23 2.67h1.63c.67 0 1.23-.5 1.32-1.15l.22-1.52h-2.94Zm-5.9 0 .23 2.67h-1.63c-.67 0-1.23-.5-1.32-1.15l-.22-1.52h2.94Z"/></svg>
+        </a>
+        <button class="navigation__toggle navigation__button js-toggle-button" type="button" aria-label="Выпадающий список меню"></button>
+      </div>
+      <div class="navigation__wrapper">
+        <ul class="navigation__list clearul">
+          <li class="navigation__item navigation__item--current">
             <a class="navigation__link" href="#">Главная</a>
           </li>
           <li class="navigation__item">
@@ -44,41 +54,64 @@
           <li class="navigation__item">
             <a class="navigation__link" href="#">О нас</a>
           </li>
-      </ul>
-     </div>
+        </ul>
+      </div>
     </nav>
     <main>
       <section class="hero container" data-test="hero">
-      <picture>
-        <source type="image/webp" media="(min-width: 1440px)" width="600" height="600" srcset="images/sliderflat-desktop@1x.webp 1x, images/sliderflat-desktop@2x.webp 2x">
-        <source type="image/webp" media="(min-width: 768px)" width="476" height="476" srcset="images/sliderflat-tablet@1x.webp 1x, images/sliderflat-tablet@2x.webp 2x">
-        <source type="image/webp" width="280" height="280" srcset="images/sliderflat@1x.webp 1x, images/sliderflat@2x.webp 2x">
-
-        <source media="(min-width: 1440px)" width="600" height="600" type="image/png" srcset="images/sliderflat-desktop@1x.png 1x, images/sliderflat-desktop@2x.png 2x">
-        <source media="(min-width: 768px)" width="476" height="476" type="image/png" srcset="images/sliderflat-tablet@1x.png 1x, images/sliderflat-tablet@2x.png 2x">
-        <img class="hero__image" src="images/sliderflat@1x.png" srcset="images/sliderflat@2x.png 2x" width="280" height="280" loading="lazy" alt="Декаф Флет Уайт">
-      </picture>
-      <div class="hero__container">
-      <p class="hero__newest">Новинка!</p>
-      <h1 class="hero__title no-indent">Декаф Флэт Уайт</h1>
-      <p class="hero__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-      <div class="hero__price">
-        <div class="hero__price-container">
-        <p class="hero__price-discount">295₽</p>
-        <p class="hero__price-present">225₽</p>
+        <picture>
+          <source type="image/webp" media="(min-width: 1440px)" width="600" height="600" srcset="images/sliderflat-desktop@1x.webp 1x, images/sliderflat-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" width="476" height="476" srcset="images/sliderflat-tablet@1x.webp 1x, images/sliderflat-tablet@2x.webp 2x">
+          <source type="image/webp" width="280" height="280" srcset="images/sliderflat@1x.webp 1x, images/sliderflat@2x.webp 2x">
+          <source media="(min-width: 1440px)" width="600" height="600" type="image/png" srcset="images/sliderflat-desktop@1x.png 1x, images/sliderflat-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" width="476" height="476" type="image/png" srcset="images/sliderflat-tablet@1x.png 1x, images/sliderflat-tablet@2x.png 2x">
+          <img class="hero__image" src="images/sliderflat@1x.png" srcset="images/sliderflat@2x.png 2x" width="280" height="280" loading="lazy" alt="Декаф Флет Уайт">
+        </picture>
+        <div class="hero__container">
+          <p class="hero__newest">Новинка!</p>
+          <h1 class="hero__title no-indent">Декаф Флэт Уайт</h1>
+          <p class="hero__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+          <div class="hero__price">
+            <div class="hero__price-container">
+              <p class="hero__price-discount">295₽</p>
+              <p class="hero__price-present">225₽</p>
+            </div>
+            <button class="hero__button" type="button">Заказать</button>
+          </div>
         </div>
-        <button class="hero__button" type="button">Заказать</button>
-      </div>
-    </div>
-    <button class="hero__slider-buttonnext" type="button" aria-label="Кнопка слайдера следующий товар"></button>
-    <button class="hero__slider-buttonprev" type="button" aria-label="Кнопка слайдера предыдущий товар"></button>
-    <div class="hero__slider-controls">
-  <button class="hero__slider-bar hero__slider-bar--active" type="button" aria-label="Первый слайд"></button>
-  <button class="hero__slider-bar" type="button" aria-label="Второй слайд"></button>
-  <button class="hero__slider-bar" type="button" aria-label="Третий слайд"></button>
-    </div>
-    </section>
+        <button class="hero__slider-buttonnext" type="button" aria-label="Кнопка слайдера следующий товар"></button>
+        <button class="hero__slider-buttonprev" type="button" aria-label="Кнопка слайдера предыдущий товар"></button>
+        <div class="hero__slider-controls">
+          <button class="hero__slider-bar hero__slider-bar--active" type="button" aria-label="Первый слайд"></button>
+          <button class="hero__slider-bar" type="button" aria-label="Второй слайд"></button>
+          <button class="hero__slider-bar" type="button" aria-label="Третий слайд"></button>
+        </div>
+      </section>
+      <section class="features container">
+        <p class="features__features">Преимущества</p>
+        <h1 class="features__title no-indent">Главные причины выбрать Drink2Go</h1>
+        <div class="features__container">
+          <ul class="features__list clearul">
+            <li class="features__item">
+              <p class="features__item-title">Скорость</p>
+              <p class="features__item-description">Готовый напиток всегда под рукой — просто открой банку</p>
+            </li>
+            <li class="features__item">
+              <p class="features__item-title">Удобство</p>
+              <p class="features__item-description">Легко помещается и в карман, и в маленькую сумочку</p>
+            </li>
+            <li class="features__item">
+              <p class="features__item-title">Бодрость</p>
+              <p class="features__item-description">Сбалансированная доза кофеина даст мощный заряд энергии</p>
+            </li>
+            <li class="features__item">
+              <p class="features__item-title">Экологичность</p>
+              <p class="features__item-description">Вся упаковка сделана из перерабатываемых материалов</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <script src="scripts/index.js" type="module" defer></script>
+    <script src="scripts/index.js" defer></script>
   </body>
 </html>
